# tehom

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  README.md  example.ipynb  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: github-actions.yml
docs/: .gitignore  Makefile  make.bat
docs/source/: .gitignore  conf.py  index.rst  modules.rst  tehom.datalib.rst  tehom.rst  tehom.shared.rst
src/choshek/: datalib.py  shared.py
storage/: .gitignore
tehom/: .gitignore  __init__.py  __main__.py  _persistence.py  _version.py  datalib.py  downloads.py  shared.py
tehom/storage/onc/: .gitignore
tehom/tests/: conftest.py  test_basic.py  test_downloads.py  test_persistence.py
tests/: test.py
