[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "tehom"
dynamic = ["version"]

[project.scripts]
cert-avail = "tehom.downloads:certify_audio_availability"

[tool.setuptools_scm]

[tool.black]
target-version = ['py37', 'py38', 'py39']
verbose = 1
experimental-string-processing = 1
line-length = 79
force-exclude = '''
(
    asv/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
  | docs
  | _version.py
  | setup.py
  | versioneer.py
)
'''


[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
testpaths = [
  "tehom",
]

[tool.coverage.run]
source = ["tehom"]
omit = [
  "**/__init__.py",
  "**/_version.py",
  "**/tests/*",
]

[tool.isort]
profile = "black"
verbose = true
force_alphabetical_sort_within_sections = true
use_parentheses = true
lines_between_types = 1
only_sections = true
extend_skip = [
  "env",
  "versioneer.py",
  "docs",
  "_version.py",
  "setup.py"
]
