[metadata]
name = tehom
description = Transform underwater acoustic data into training data for machine learning.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jake Stevens-Haas
author_email = jacob.stevens.haas@gmail.com
url = https://github.com/Jacob-Stevens-Haas/tehom
license = AGPL
license_file = LICENSE
platforms = any
classifiers = 
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Multimedia :: Sound/Audio
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
project_urls =
    Bug Tracker = https://github.com/Jacob-Stevens-Haas/tehom/issues
    Documentation = https://tehom.readthedocs.io/en/latest/
    Source Code = https://github.com/Jacob-Stevens-Haas/tehom

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    pandas
    matplotlib
    numpy
    plotly
include_package_data = True
zip_safe = False


[versioneer]
VCS = git
style = pep440
versionfile_source = tehom/_version.py
versionfile_build = tehom/_version.py
tag_prefix = 
parentdir_prefix = tehom-

[flake8]
verbose = v
exclude =
    env,
    versioneer.py,
    _version.py,
    setup.py,
    build,
    docs/*
ignore =
    E203,
    W503,
    C408